--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,1 @@
-<main>
-    <h1>Hello from Angular 2 App with Webpack</h1>
-    <img src="../../public/images/angular.png">
-</main>
+<router-outlet></router-outlet>
